<resources>
    <string name="app_name">Android-WardrobeApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="already_a_member_log_in_here">Already a Member? Log in here.</string>
    <string name="link_no_account_sign_up">No account yet? <u>Create one now</u>.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_up">Sign Up</string>

    <!-- Menu-related strings -->
    <string name="menu_add_clothing">Add Clothing</string>
    <string name="menu_sign_out">Sign Out</string>

    <!-- Login Activity -->
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up1">Sign up</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Sign-Up Profile -->
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="ok">OK</string>
    <string name="name1">Name*</string>
    <string name="e_mail1">E-mail*</string>
    <string name="password1">Password*</string>
    <string name="confirm_password1">Confirm password*</string>
    <string name="gender2">Gender</string>
    <string name="names">Name*</string>
    <string name="e_mails">E-mail*</string>
    <string name="passwords">Password*</string>
    <string name="confirm_passwords">Confirm password*</string>

    <!-- Weather related String -->
    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">3c28a0394d473bfc20784d5cca0f0f48</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
</resources>
